2007-02-07  Michael Goffioul  <michael.goffioul@swing.be>

	* aclocal.m4 (OCTAVE_HDF5_DLL): New macro.
	* configure.in: Use it.

2007-02-05  John W. Eaton  <jwe@octave.org>

	* configure.in: Check for realpath function.

	* demo.m: Delete obsolete file.

2007-01-29  Michael Goffioul  <michael.goffioul@swing.be>

	* configure.in (*-*-msdosmsvc): Set NO_OCT_FILE_STRIP to true.

2007-01-24  John W. Eaton  <jwe@octave.org>

	* octMakefile.in (install): Install NEWS file.
	(uninstall): Remove it.

2007-01-08  David Bateman  <dbateman@free.fr>

	* configure.in: Replace sparsesuite with suitesparse to match
	upstream name.

2006-12-06  Michael Goffioul  <michael.goffioul@swing.be>

	* acx_blas.m4, acx_lapack.m4: Handle f2c calling convention.

2006-12-05  John W. Eaton  <jwe@octave.org>

	* configure.in: Don't check for strptime on *-apple-darwin* systems.

2006-11-28  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in: Construct default output file from basename of
	input file name.

2006-11-28  David Bateman  <dbateman@free.fr>

	* configure.in: Check for sparse header files in the sparsesuite
	sub-directory. In the cholmod tests, include the camd libraries, as
	this might be a dependency for cholmod.

2006-11-15  John W. Eaton  <jwe@octave.org>

	* run-octave.in: Don't forget LD_PRELOAD if there are args.

2006-11-14  John W. Eaton  <jwe@octave.org>

	* configure.in: If warning message is printed, print additional
	final note about missing libraries.

2006-11-13  John W. Eaton  <jwe@octave.org>

	* octave.cc (maximum_braindamage): Disable
	Octave:fopen-file-in-path and Octave:load-file-in-path warnings.

	* run-octave.in: Substitute liboctinterp, liboctave, and libcruft.
	Use them to set LD_PRELOAD.
	* Makeconf.in (do-subst-script-vals): Also substitute
	liboctinterp, liboctave, and libcruft.

2006-11-13  Rafael Laboissiere  <rafael@debian.org>

	* mkoctfile.in: Add -Wl,... options to ldflags, not pass_on_flags.

2006-11-11  John W. Eaton  <jwe@octave.org>
